fix: update scrollbar colors and improve navigation links in demo and index pages

--- a/db.css
+++ b/db.css
@@ -3,8 +3,8 @@
 :root {
   --text-1: #dadada;
   --text-2: #c7c7c7;
-  --scrollbar-1: #040a0f;
-  --scrollbar-2: #202b38;
+  --scrollbar-1: #03070a;
+  --scrollbar-2: #2c2c2c;
   --background-1: #0c0c0c;
   --background-2: #161616;
   --input-background-1: #121212;
@@ -25,7 +25,7 @@
 html {
   font-family: Poppins, "Open Sans", "Helvetica Neue", sans-serif;
   scrollbar-color: var(--scrollbar-1) var(--scrollbar-2);
-  scrollbar-width: 4px;
+  scrollbar-width: var(--border-radius);
 }
 body {
   max-width: 750px;
